WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200587
Web Inspector: REGRESSION(
r248454
): WK1 inspector frontend client doesn't queue messages to the frontend before it's loaded
https://bugs.webkit.org/show_bug.cgi?id=200587
Summary
Web Inspector: REGRESSION(r248454): WK1 inspector frontend client doesn't que...
Devin Rousso
Reported
2019-08-09 14:05:52 PDT
WK1 inspector pipes messages to the frontend using `WebCore::InspectorClient::doDispatchMessageOnFrontendPage`, which does NOT do any sort of queueing to wait until the frontend is loaded (`InspectorFrontendHost.loaded()`). Now that we are sending messages immediately, we should always queue.
Attachments
Patch
(23.09 KB, patch)
2019-08-09 14:14 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-highsierra
(3.43 MB, application/zip)
2019-08-09 15:26 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews114 for mac-highsierra
(3.24 MB, application/zip)
2019-08-09 16:24 PDT
,
EWS Watchlist
no flags
Details
Patch
(23.96 KB, patch)
2019-08-09 19:47 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2019-08-09 14:14:42 PDT
Created
attachment 375954
[details]
Patch
Devin Rousso
Comment 2
2019-08-09 14:16:04 PDT
I think this might also fix the test failures for <
https://webkit.org/b/200110
>.
Joseph Pecoraro
Comment 3
2019-08-09 14:20:28 PDT
Comment on
attachment 375954
[details]
Patch r=me assuming tests pass!
EWS Watchlist
Comment 4
2019-08-09 15:26:24 PDT
Comment hidden (obsolete)
Comment on
attachment 375954
[details]
Patch
Attachment 375954
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/12887347
New failing tests: inspector/debugger/break-in-constructor-before-super.html inspector/debugger/breakpoint-eval-with-exception.html inspector/debugger/setBreakpointByUrl-sourceURL.html inspector/debugger/evaluateOnCallFrame-errors.html inspector/debugger/pause-on-assert.html inspector/debugger/setBreakpoint-condition.html inspector/debugger/regress-133182.html inspector/debugger/setBreakpoint-column.html
EWS Watchlist
Comment 5
2019-08-09 15:26:25 PDT
Comment hidden (obsolete)
Created
attachment 375967
[details]
Archive of layout-test-results from ews103 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 6
2019-08-09 16:24:35 PDT
Comment hidden (obsolete)
Comment on
attachment 375954
[details]
Patch
Attachment 375954
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/12887581
New failing tests: inspector/debugger/breakpoint-eval-with-exception.html inspector/debugger/setBreakpointByUrl-sourceURL.html inspector/debugger/evaluateOnCallFrame-errors.html inspector/debugger/pause-on-assert.html inspector/debugger/setBreakpoint-condition.html inspector/debugger/regress-133182.html inspector/debugger/setBreakpoint-column.html
EWS Watchlist
Comment 7
2019-08-09 16:24:37 PDT
Comment hidden (obsolete)
Created
attachment 375979
[details]
Archive of layout-test-results from ews114 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-highsierra Platform: Mac OS X 10.13.6
Devin Rousso
Comment 8
2019-08-09 19:47:18 PDT
Created
attachment 375996
[details]
Patch Add additional code which I mistakenly forgot to copy from `doDispatchMessageOnFrontendPage`
WebKit Commit Bot
Comment 9
2019-08-10 00:02:35 PDT
Comment on
attachment 375996
[details]
Patch Clearing flags on attachment: 375996 Committed
r248497
: <
https://trac.webkit.org/changeset/248497
>
WebKit Commit Bot
Comment 10
2019-08-10 00:02:36 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11
2019-08-10 00:03:20 PDT
<
rdar://problem/54156422
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug